{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 264,
  "lineage": "99cf5756-e015-6c22-809e-7a12d10ef567",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "haproxy_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-023928a945cb4cdc1",
            "arn": "arn:aws:ec2:ap-northeast-2:043309338570:elastic-ip/eipalloc-023928a945cb4cdc1",
            "domain": "vpc",
            "id": "eipalloc-023928a945cb4cdc1",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-3-37-118-68.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.37.118.68",
            "public_ipv4_pool": "amazon",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "dev-haproxy-eip"
            },
            "tags_all": {
              "Name": "dev-haproxy-eip"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02c66ee5d2ff32ab6",
            "arn": "arn:aws:ec2:ap-northeast-2:043309338570:elastic-ip/eipalloc-02c66ee5d2ff32ab6",
            "domain": "vpc",
            "id": "eipalloc-02c66ee5d2ff32ab6",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-52-78-94-219.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "52.78.94.219",
            "public_ipv4_pool": "amazon",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "dev-nat-eip"
            },
            "tags_all": {
              "Name": "dev-nat-eip"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_blue",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-08c5f168115c8dd04",
            "arn": "arn:aws:ec2:ap-northeast-2:043309338570:instance/i-0fff54e6ea0ff4005",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "dev-instance-profile",
            "id": "i-0fff54e6ea0ff4005",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "enabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-02a67a2032701b7c4"
              }
            ],
            "primary_network_interface_id": "eni-02a67a2032701b7c4",
            "private_dns": "ip-10-0-2-221.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.221",
            "region": "ap-northeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04167c7611e78e31b",
                "volume_size": 12,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fcd4325449368ef9",
            "tags": {
              "Name": "dev-app-blue",
              "Role": "active"
            },
            "tags_all": {
              "Name": "dev-app-blue",
              "Role": "active"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e6a671d1aea35389"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.instance_profile",
            "aws_iam_role.ec2_role",
            "aws_security_group.sg_1",
            "aws_subnet.subnet_blue",
            "aws_vpc.vpc_1",
            "data.aws_ami.latest_amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_green",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-08c5f168115c8dd04",
            "arn": "arn:aws:ec2:ap-northeast-2:043309338570:instance/i-0a2b079665c0a4810",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "dev-instance-profile",
            "id": "i-0a2b079665c0a4810",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "enabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-05e7d18878643b6ed"
              }
            ],
            "primary_network_interface_id": "eni-05e7d18878643b6ed",
            "private_dns": "ip-10-0-3-200.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.200",
            "region": "ap-northeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05e8e7bae1febdb81",
                "volume_size": 12,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06fb1220bfabdcc2c",
            "tags": {
              "Name": "dev-app-green",
              "Role": "standby"
            },
            "tags_all": {
              "Name": "dev-app-green",
              "Role": "standby"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e6a671d1aea35389"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.instance_profile",
            "aws_iam_role.ec2_role",
            "aws_security_group.sg_1",
            "aws_subnet.subnet_green",
            "aws_vpc.vpc_1",
            "data.aws_ami.latest_amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "haproxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-08c5f168115c8dd04",
            "arn": "arn:aws:ec2:ap-northeast-2:043309338570:instance/i-039b4cc5a09e9f4fc",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "dev-instance-profile",
            "id": "i-039b4cc5a09e9f4fc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "enabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-07adf900eb0256741"
              }
            ],
            "primary_network_interface_id": "eni-07adf900eb0256741",
            "private_dns": "ip-10-0-1-174.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.174",
            "public_dns": "ec2-52-79-32-39.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "52.79.32.39",
            "region": "ap-northeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a94a3173e1e59423",
                "volume_size": 12,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b2c111cf4f1d941f",
            "tags": {
              "Name": "dev-haproxy"
            },
            "tags_all": {
              "Name": "dev-haproxy"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e6a671d1aea35389"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.instance_profile",
            "aws_iam_role.ec2_role",
            "aws_instance.app_blue",
            "aws_instance.app_green",
            "aws_security_group.sg_1",
            "aws_subnet.subnet_blue",
            "aws_subnet.subnet_green",
            "aws_subnet.subnet_public",
            "aws_vpc.vpc_1",
            "data.aws_ami.latest_amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "monitoring",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-08c5f168115c8dd04",
            "arn": "arn:aws:ec2:ap-northeast-2:043309338570:instance/i-0e05b2fe8ec9ef8e3",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "dev-instance-profile",
            "id": "i-0e05b2fe8ec9ef8e3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "enabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0d4136aea077a5225"
              }
            ],
            "primary_network_interface_id": "eni-0d4136aea077a5225",
            "private_dns": "ip-10-0-7-167.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.7.167",
            "region": "ap-northeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f316741c2530175b",
                "volume_size": 15,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-088cf449d0c68f2ba",
            "tags": {
              "Name": "dev-monitoring"
            },
            "tags_all": {
              "Name": "dev-monitoring"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e6a671d1aea35389"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.instance_profile",
            "aws_iam_role.ec2_role",
            "aws_security_group.sg_1",
            "aws_subnet.subnet_monitoring",
            "aws_vpc.vpc_1",
            "data.aws_ami.latest_amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mysql_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-08c5f168115c8dd04",
            "arn": "arn:aws:ec2:ap-northeast-2:043309338570:instance/i-064cac6dce5227e67",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "dev-instance-profile",
            "id": "i-064cac6dce5227e67",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "enabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-079e0391d255f075f"
              }
            ],
            "primary_network_interface_id": "eni-079e0391d255f075f",
            "private_dns": "ip-10-0-6-51.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.6.51",
            "region": "ap-northeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ddd71daec0fa4e5a",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a7b17705e77ef89f",
            "tags": {
              "Name": "dev-mysql-master"
            },
            "tags_all": {
              "Name": "dev-mysql-master"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e6a671d1aea35389"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.instance_profile",
            "aws_iam_role.ec2_role",
            "aws_security_group.sg_1",
            "aws_subnet.subnet_db",
            "aws_vpc.vpc_1",
            "data.aws_ami.latest_amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mysql_slave",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-08c5f168115c8dd04",
            "arn": "arn:aws:ec2:ap-northeast-2:043309338570:instance/i-0aa3712bb79c19407",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "dev-instance-profile",
            "id": "i-0aa3712bb79c19407",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "enabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0bad036e1cfb5097c"
              }
            ],
            "primary_network_interface_id": "eni-0bad036e1cfb5097c",
            "private_dns": "ip-10-0-6-149.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.6.149",
            "region": "ap-northeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07069ca73ea5bada1",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a7b17705e77ef89f",
            "tags": {
              "Name": "dev-mysql-slave"
            },
            "tags_all": {
              "Name": "dev-mysql-slave"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e6a671d1aea35389"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.instance_profile",
            "aws_iam_role.ec2_role",
            "aws_instance.mysql_master",
            "aws_security_group.sg_1",
            "aws_subnet.subnet_db",
            "aws_vpc.vpc_1",
            "data.aws_ami.latest_amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "proxysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-08c5f168115c8dd04",
            "arn": "arn:aws:ec2:ap-northeast-2:043309338570:instance/i-081780045486c9ab2",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "dev-instance-profile",
            "id": "i-081780045486c9ab2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "enabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0d57ecc99f5276f65"
              }
            ],
            "primary_network_interface_id": "eni-0d57ecc99f5276f65",
            "private_dns": "ip-10-0-6-5.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.6.5",
            "region": "ap-northeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01209add7e002b2b9",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a7b17705e77ef89f",
            "tags": {
              "Name": "dev-proxysql"
            },
            "tags_all": {
              "Name": "dev-proxysql"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e6a671d1aea35389"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.instance_profile",
            "aws_iam_role.ec2_role",
            "aws_instance.mysql_master",
            "aws_instance.mysql_slave",
            "aws_security_group.sg_1",
            "aws_subnet.subnet_db",
            "aws_vpc.vpc_1",
            "data.aws_ami.latest_amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "rabbitmq",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-08c5f168115c8dd04",
            "arn": "arn:aws:ec2:ap-northeast-2:043309338570:instance/i-0e8fdeb4e784de173",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "dev-instance-profile",
            "id": "i-0e8fdeb4e784de173",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "enabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0d88a2a46bb5f18b3"
              }
            ],
            "primary_network_interface_id": "eni-0d88a2a46bb5f18b3",
            "private_dns": "ip-10-0-5-199.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.5.199",
            "region": "ap-northeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-06c26b4aaa2cecede",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07c7adcc0703675dc",
            "tags": {
              "Name": "dev-rabbitmq"
            },
            "tags_all": {
              "Name": "dev-rabbitmq"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e6a671d1aea35389"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.instance_profile",
            "aws_iam_role.ec2_role",
            "aws_security_group.sg_1",
            "aws_subnet.subnet_redis_mq",
            "aws_vpc.vpc_1",
            "data.aws_ami.latest_amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "redis_cache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-08c5f168115c8dd04",
            "arn": "arn:aws:ec2:ap-northeast-2:043309338570:instance/i-0dd4bbd76021aefc5",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "dev-instance-profile",
            "id": "i-0dd4bbd76021aefc5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "enabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-026a8aee5e7c119d1"
              }
            ],
            "primary_network_interface_id": "eni-026a8aee5e7c119d1",
            "private_dns": "ip-10-0-5-163.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.5.163",
            "region": "ap-northeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0325cc31958c76644",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07c7adcc0703675dc",
            "tags": {
              "Name": "dev-redis-cache"
            },
            "tags_all": {
              "Name": "dev-redis-cache"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e6a671d1aea35389"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.instance_profile",
            "aws_iam_role.ec2_role",
            "aws_security_group.sg_1",
            "aws_subnet.subnet_redis_mq",
            "aws_vpc.vpc_1",
            "data.aws_ami.latest_amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "redis_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-08c5f168115c8dd04",
            "arn": "arn:aws:ec2:ap-northeast-2:043309338570:instance/i-0b1958d5f2b650f34",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "dev-instance-profile",
            "id": "i-0b1958d5f2b650f34",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "enabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-075341173094d0444"
              }
            ],
            "primary_network_interface_id": "eni-075341173094d0444",
            "private_dns": "ip-10-0-4-220.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.220",
            "region": "ap-northeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b3a94bbb93c63c8d",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-041cdd8d734a8f9b6",
            "tags": {
              "Name": "dev-redis-master"
            },
            "tags_all": {
              "Name": "dev-redis-master"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e6a671d1aea35389"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.instance_profile",
            "aws_iam_role.ec2_role",
            "aws_route53_zone.private",
            "aws_security_group.sg_1",
            "aws_subnet.subnet_redis_sentinel",
            "aws_vpc.vpc_1",
            "data.aws_ami.latest_amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "redis_slave1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-08c5f168115c8dd04",
            "arn": "arn:aws:ec2:ap-northeast-2:043309338570:instance/i-0fded9c606508e124",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "dev-instance-profile",
            "id": "i-0fded9c606508e124",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "enabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-066b4bfcd7d69b4bd"
              }
            ],
            "primary_network_interface_id": "eni-066b4bfcd7d69b4bd",
            "private_dns": "ip-10-0-4-153.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.153",
            "region": "ap-northeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01700cd3fea213f4c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-041cdd8d734a8f9b6",
            "tags": {
              "Name": "dev-redis-slave1"
            },
            "tags_all": {
              "Name": "dev-redis-slave1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e6a671d1aea35389"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.instance_profile",
            "aws_iam_role.ec2_role",
            "aws_instance.redis_master",
            "aws_route53_zone.private",
            "aws_security_group.sg_1",
            "aws_subnet.subnet_redis_sentinel",
            "aws_vpc.vpc_1",
            "data.aws_ami.latest_amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "redis_slave2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-08c5f168115c8dd04",
            "arn": "arn:aws:ec2:ap-northeast-2:043309338570:instance/i-092d9656f54609900",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "dev-instance-profile",
            "id": "i-092d9656f54609900",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "enabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-019d13d7d214be385"
              }
            ],
            "primary_network_interface_id": "eni-019d13d7d214be385",
            "private_dns": "ip-10-0-4-222.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.222",
            "region": "ap-northeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-047a78d8b8b46e052",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-041cdd8d734a8f9b6",
            "tags": {
              "Name": "dev-redis-slave2"
            },
            "tags_all": {
              "Name": "dev-redis-slave2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e6a671d1aea35389"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.instance_profile",
            "aws_iam_role.ec2_role",
            "aws_instance.redis_master",
            "aws_route53_zone.private",
            "aws_security_group.sg_1",
            "aws_subnet.subnet_redis_sentinel",
            "aws_vpc.vpc_1",
            "data.aws_ami.latest_amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:043309338570:internet-gateway/igw-0cf6098a1c32b62a1",
            "id": "igw-0cf6098a1c32b62a1",
            "owner_id": "043309338570",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "dev-igw"
            },
            "tags_all": {
              "Name": "dev-igw"
            },
            "vpc_id": "vpc-0a487f7cf3316ff9a"
          },
          "dependencies": [
            "aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02c66ee5d2ff32ab6",
            "association_id": "eipassoc-078f56c61393745ed",
            "connectivity_type": "public",
            "id": "nat-028ef548f1e1ddaff",
            "network_interface_id": "eni-086e44bd9a2f9a537",
            "private_ip": "10.0.1.41",
            "public_ip": "52.78.94.219",
            "region": "ap-northeast-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b2c111cf4f1d941f",
            "tags": {
              "Name": "dev-nat-gw"
            },
            "tags_all": {
              "Name": "dev-nat-gw"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.subnet_public",
            "aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:043309338570:route-table/rtb-0813463fd55b72aa4",
            "id": "rtb-0813463fd55b72aa4",
            "owner_id": "043309338570",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-028ef548f1e1ddaff",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-rt-private"
            },
            "tags_all": {
              "Name": "dev-rt-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a487f7cf3316ff9a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gw",
            "aws_subnet.subnet_public",
            "aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:043309338570:route-table/rtb-0b79d7280e27f0644",
            "id": "rtb-0b79d7280e27f0644",
            "owner_id": "043309338570",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cf6098a1c32b62a1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-rt-public"
            },
            "tags_all": {
              "Name": "dev-rt-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a487f7cf3316ff9a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw_1",
            "aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "assoc_blue",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0771b60d57c828d72",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0813463fd55b72aa4",
            "subnet_id": "subnet-0fcd4325449368ef9"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.rt_private",
            "aws_subnet.subnet_blue",
            "aws_subnet.subnet_public",
            "aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "assoc_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0acc478ca31a05a7a",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0813463fd55b72aa4",
            "subnet_id": "subnet-0a7b17705e77ef89f"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.rt_private",
            "aws_subnet.subnet_db",
            "aws_subnet.subnet_public",
            "aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "assoc_green",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0568a413787845e22",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0813463fd55b72aa4",
            "subnet_id": "subnet-06fb1220bfabdcc2c"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.rt_private",
            "aws_subnet.subnet_green",
            "aws_subnet.subnet_public",
            "aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "assoc_monitoring",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0afc603d11f6ad61d",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0813463fd55b72aa4",
            "subnet_id": "subnet-088cf449d0c68f2ba"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.rt_private",
            "aws_subnet.subnet_monitoring",
            "aws_subnet.subnet_public",
            "aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "assoc_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0009ae0cfa8cff6d0",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0b79d7280e27f0644",
            "subnet_id": "subnet-0b2c111cf4f1d941f"
          },
          "dependencies": [
            "aws_internet_gateway.igw_1",
            "aws_route_table.rt_public",
            "aws_subnet.subnet_public",
            "aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "assoc_redis_mq",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06e9b45b9cf0a55ca",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0813463fd55b72aa4",
            "subnet_id": "subnet-07c7adcc0703675dc"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.rt_private",
            "aws_subnet.subnet_public",
            "aws_subnet.subnet_redis_mq",
            "aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "assoc_redis_sentinel",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01837c424abb3ba6f",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0813463fd55b72aa4",
            "subnet_id": "subnet-041cdd8d734a8f9b6"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.rt_private",
            "aws_subnet.subnet_public",
            "aws_subnet.subnet_redis_sentinel",
            "aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:043309338570:security-group/sg-0e6a671d1aea35389",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e6a671d1aea35389",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "dev-sg",
            "name_prefix": "",
            "owner_id": "043309338570",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-sg"
            },
            "tags_all": {
              "Name": "dev-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a487f7cf3316ff9a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_blue",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:043309338570:subnet/subnet-0fcd4325449368ef9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fcd4325449368ef9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "043309338570",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "dev-subnet-blue"
            },
            "tags_all": {
              "Name": "dev-subnet-blue"
            },
            "vpc_id": "vpc-0a487f7cf3316ff9a"
          },
          "dependencies": [
            "aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:043309338570:subnet/subnet-0a7b17705e77ef89f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a7b17705e77ef89f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "043309338570",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "dev-subnet-db"
            },
            "tags_all": {
              "Name": "dev-subnet-db"
            },
            "vpc_id": "vpc-0a487f7cf3316ff9a"
          },
          "dependencies": [
            "aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_green",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:043309338570:subnet/subnet-06fb1220bfabdcc2c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06fb1220bfabdcc2c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "043309338570",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "dev-subnet-green"
            },
            "tags_all": {
              "Name": "dev-subnet-green"
            },
            "vpc_id": "vpc-0a487f7cf3316ff9a"
          },
          "dependencies": [
            "aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_monitoring",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:043309338570:subnet/subnet-088cf449d0c68f2ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-088cf449d0c68f2ba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "043309338570",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "dev-subnet-monitoring"
            },
            "tags_all": {
              "Name": "dev-subnet-monitoring"
            },
            "vpc_id": "vpc-0a487f7cf3316ff9a"
          },
          "dependencies": [
            "aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:043309338570:subnet/subnet-0b2c111cf4f1d941f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b2c111cf4f1d941f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "043309338570",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "dev-subnet-public"
            },
            "tags_all": {
              "Name": "dev-subnet-public"
            },
            "vpc_id": "vpc-0a487f7cf3316ff9a"
          },
          "dependencies": [
            "aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_redis_mq",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:043309338570:subnet/subnet-07c7adcc0703675dc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07c7adcc0703675dc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "043309338570",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "dev-subnet-redis-mq"
            },
            "tags_all": {
              "Name": "dev-subnet-redis-mq"
            },
            "vpc_id": "vpc-0a487f7cf3316ff9a"
          },
          "dependencies": [
            "aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_redis_sentinel",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:043309338570:subnet/subnet-041cdd8d734a8f9b6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2d",
            "availability_zone_id": "apne2-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-041cdd8d734a8f9b6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "043309338570",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "dev-subnet-redis-sentinel"
            },
            "tags_all": {
              "Name": "dev-subnet-redis-sentinel"
            },
            "vpc_id": "vpc-0a487f7cf3316ff9a"
          },
          "dependencies": [
            "aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:043309338570:vpc/vpc-0a487f7cf3316ff9a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0aba7c87faff66a81",
            "default_route_table_id": "rtb-06d24ba51127b20b2",
            "default_security_group_id": "sg-059d91b8d5e815db0",
            "dhcp_options_id": "dopt-0661f87cbf0ae7d7b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a487f7cf3316ff9a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06d24ba51127b20b2",
            "owner_id": "043309338570",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "dev-vpc"
            },
            "tags_all": {
              "Name": "dev-vpc"
            }
          }
        }
      ]
    }
  ]
}